# axum-auth-website

./: .gitignore  Cargo.toml  env-example.toml  readme.md  todo.md
.github/workflows/: rust.yml
src/: app_config.rs  ctx.rs  error.rs  jwt_claims.rs  main.rs  user.rs
src/api/: mod.rs  routes_login.rs  routes_parent.rs  routes_user.rs
src/api/helpers/: mod.rs  password.rs
src/controllers/db/: dynamo.rs  mod.rs
src/mw/: mw_auth.rs
src/pages/: mod.rs
src/web/: mod.rs  mw_auth.rs  routes_home.rs  routes_login.rs
templates/: home.stpl  index.stpl  parent.stpl  user.stpl
