[package]
name = "axum-auth-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
axum = "0.6.18"
sailfish = "0.6.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
jsonwebtoken = "8.3.0"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }
async-trait = "0.1.68"
toml = "0.7.4"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
serde_dynamo = "4.2.3"
rust-argon2 = "1.0.0"
